// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Api set functions setBoostDelay sends value 0 1`] = `
{
  "calls": [
    [
      E {
        "_dataEntries": [
          {
            "parameter": 102,
            "value": Uint8Array [
              0,
            ],
          },
        ],
        "_deviceId": "fanId",
        "_functionType": 2,
        "_password": "password",
      },
      "127.0.0.1",
    ],
  ],
  "response": {
    "boost_delay": 0,
  },
}
`;

exports[`Api set functions setBoostDelay sends value 1 1`] = `
{
  "calls": [
    [
      E {
        "_dataEntries": [
          {
            "parameter": 102,
            "value": Uint8Array [
              1,
            ],
          },
        ],
        "_deviceId": "fanId",
        "_functionType": 2,
        "_password": "password",
      },
      "127.0.0.1",
    ],
  ],
  "response": {
    "boost_delay": 1,
  },
}
`;

exports[`Api set functions setBoostDelay sends value 2 1`] = `
{
  "calls": [
    [
      E {
        "_dataEntries": [
          {
            "parameter": 102,
            "value": Uint8Array [
              2,
            ],
          },
        ],
        "_deviceId": "fanId",
        "_functionType": 2,
        "_password": "password",
      },
      "127.0.0.1",
    ],
  ],
  "response": {
    "boost_delay": 2,
  },
}
`;

exports[`Api set functions setHumiditySensor sends value 0 1`] = `
{
  "calls": [
    [
      E {
        "_dataEntries": [
          {
            "parameter": 15,
            "value": Uint8Array [
              0,
            ],
          },
        ],
        "_deviceId": "fanId",
        "_functionType": 2,
        "_password": "password",
      },
      "127.0.0.1",
    ],
  ],
  "response": {
    "humidity_sensor": false,
  },
}
`;

exports[`Api set functions setHumiditySensor sends value 1 1`] = `
{
  "calls": [
    [
      E {
        "_dataEntries": [
          {
            "parameter": 15,
            "value": Uint8Array [
              1,
            ],
          },
        ],
        "_deviceId": "fanId",
        "_functionType": 2,
        "_password": "password",
      },
      "127.0.0.1",
    ],
  ],
  "response": {
    "humidity_sensor": true,
  },
}
`;

exports[`Api set functions setHumiditySensor sends value 2 1`] = `
{
  "calls": [
    [
      E {
        "_dataEntries": [
          {
            "parameter": 15,
            "value": Uint8Array [
              2,
            ],
          },
        ],
        "_deviceId": "fanId",
        "_functionType": 2,
        "_password": "password",
      },
      "127.0.0.1",
    ],
  ],
  "response": {
    "humidity_sensor": false,
  },
}
`;

exports[`Api set functions setHumiditySensorThreshold sends value 0 1`] = `
{
  "calls": [
    [
      E {
        "_dataEntries": [
          {
            "parameter": 25,
            "value": Uint8Array [
              0,
            ],
          },
        ],
        "_deviceId": "fanId",
        "_functionType": 2,
        "_password": "password",
      },
      "127.0.0.1",
    ],
  ],
  "response": {
    "humidity_threshold": 0,
  },
}
`;

exports[`Api set functions setHumiditySensorThreshold sends value 1 1`] = `
{
  "calls": [
    [
      E {
        "_dataEntries": [
          {
            "parameter": 25,
            "value": Uint8Array [
              1,
            ],
          },
        ],
        "_deviceId": "fanId",
        "_functionType": 2,
        "_password": "password",
      },
      "127.0.0.1",
    ],
  ],
  "response": {
    "humidity_threshold": 1,
  },
}
`;

exports[`Api set functions setHumiditySensorThreshold sends value 2 1`] = `
{
  "calls": [
    [
      E {
        "_dataEntries": [
          {
            "parameter": 25,
            "value": Uint8Array [
              2,
            ],
          },
        ],
        "_deviceId": "fanId",
        "_functionType": 2,
        "_password": "password",
      },
      "127.0.0.1",
    ],
  ],
  "response": {
    "humidity_threshold": 2,
  },
}
`;

exports[`Api set functions setManualSpeed sends value 0 1`] = `
{
  "calls": [
    [
      E {
        "_dataEntries": [
          {
            "parameter": 68,
            "value": Uint8Array [
              0,
            ],
          },
        ],
        "_deviceId": "fanId",
        "_functionType": 2,
        "_password": "password",
      },
      "127.0.0.1",
    ],
  ],
  "response": {
    "fan_speed": 0,
    "manualSpeed": 0,
  },
}
`;

exports[`Api set functions setManualSpeed sends value 1 1`] = `
{
  "calls": [
    [
      E {
        "_dataEntries": [
          {
            "parameter": 68,
            "value": Uint8Array [
              1,
            ],
          },
        ],
        "_deviceId": "fanId",
        "_functionType": 2,
        "_password": "password",
      },
      "127.0.0.1",
    ],
  ],
  "response": {
    "fan_speed": 0.00392156862745098,
    "manualSpeed": 0.39215686274509803,
  },
}
`;

exports[`Api set functions setManualSpeed sends value 2 1`] = `
{
  "calls": [
    [
      E {
        "_dataEntries": [
          {
            "parameter": 68,
            "value": Uint8Array [
              2,
            ],
          },
        ],
        "_deviceId": "fanId",
        "_functionType": 2,
        "_password": "password",
      },
      "127.0.0.1",
    ],
  ],
  "response": {
    "fan_speed": 0.00784313725490196,
    "manualSpeed": 0.7843137254901961,
  },
}
`;

exports[`Api set functions setOnOffStatus sends value 0 1`] = `
{
  "calls": [
    [
      E {
        "_dataEntries": [
          {
            "parameter": 1,
            "value": Uint8Array [
              0,
            ],
          },
        ],
        "_deviceId": "fanId",
        "_functionType": 2,
        "_password": "password",
      },
      "127.0.0.1",
    ],
  ],
  "response": {
    "onoff": false,
  },
}
`;

exports[`Api set functions setOnOffStatus sends value 1 1`] = `
{
  "calls": [
    [
      E {
        "_dataEntries": [
          {
            "parameter": 1,
            "value": Uint8Array [
              1,
            ],
          },
        ],
        "_deviceId": "fanId",
        "_functionType": 2,
        "_password": "password",
      },
      "127.0.0.1",
    ],
  ],
  "response": {
    "onoff": true,
  },
}
`;

exports[`Api set functions setOnOffStatus sends value 2 1`] = `
{
  "calls": [
    [
      E {
        "_dataEntries": [
          {
            "parameter": 1,
            "value": Uint8Array [
              2,
            ],
          },
        ],
        "_deviceId": "fanId",
        "_functionType": 2,
        "_password": "password",
      },
      "127.0.0.1",
    ],
  ],
  "response": {
    "onoff": false,
  },
}
`;

exports[`Api set functions setOperationMode sends value 0 1`] = `
{
  "calls": [
    [
      E {
        "_dataEntries": [
          {
            "parameter": 183,
            "value": Uint8Array [
              0,
            ],
          },
        ],
        "_deviceId": "fanId",
        "_functionType": 2,
        "_password": "password",
      },
      "127.0.0.1",
    ],
  ],
  "response": {
    "operationMode": "0",
  },
}
`;

exports[`Api set functions setOperationMode sends value 1 1`] = `
{
  "calls": [
    [
      E {
        "_dataEntries": [
          {
            "parameter": 183,
            "value": Uint8Array [
              1,
            ],
          },
        ],
        "_deviceId": "fanId",
        "_functionType": 2,
        "_password": "password",
      },
      "127.0.0.1",
    ],
  ],
  "response": {
    "operationMode": "1",
  },
}
`;

exports[`Api set functions setOperationMode sends value 2 1`] = `
{
  "calls": [
    [
      E {
        "_dataEntries": [
          {
            "parameter": 183,
            "value": Uint8Array [
              2,
            ],
          },
        ],
        "_deviceId": "fanId",
        "_functionType": 2,
        "_password": "password",
      },
      "127.0.0.1",
    ],
  ],
  "response": {
    "operationMode": "2",
  },
}
`;

exports[`Api set functions setSpeedMode sends value 0 1`] = `
{
  "calls": [
    [
      E {
        "_dataEntries": [
          {
            "parameter": 2,
            "value": Uint8Array [
              0,
            ],
          },
        ],
        "_deviceId": "fanId",
        "_functionType": 2,
        "_password": "password",
      },
      "127.0.0.1",
    ],
  ],
  "response": {
    "speedMode": "0",
  },
}
`;

exports[`Api set functions setSpeedMode sends value 1 1`] = `
{
  "calls": [
    [
      E {
        "_dataEntries": [
          {
            "parameter": 2,
            "value": Uint8Array [
              1,
            ],
          },
        ],
        "_deviceId": "fanId",
        "_functionType": 2,
        "_password": "password",
      },
      "127.0.0.1",
    ],
  ],
  "response": {
    "speedMode": "1",
  },
}
`;

exports[`Api set functions setSpeedMode sends value 2 1`] = `
{
  "calls": [
    [
      E {
        "_dataEntries": [
          {
            "parameter": 2,
            "value": Uint8Array [
              2,
            ],
          },
        ],
        "_deviceId": "fanId",
        "_functionType": 2,
        "_password": "password",
      },
      "127.0.0.1",
    ],
  ],
  "response": {
    "speedMode": "2",
  },
}
`;

exports[`Api set functions setTimerMode sends value 0 1`] = `
{
  "calls": [
    [
      E {
        "_dataEntries": [
          {
            "parameter": 7,
            "value": Uint8Array [
              0,
            ],
          },
        ],
        "_deviceId": "fanId",
        "_functionType": 2,
        "_password": "password",
      },
      "127.0.0.1",
    ],
  ],
  "response": {
    "timerMode": "0",
  },
}
`;

exports[`Api set functions setTimerMode sends value 1 1`] = `
{
  "calls": [
    [
      E {
        "_dataEntries": [
          {
            "parameter": 7,
            "value": Uint8Array [
              1,
            ],
          },
        ],
        "_deviceId": "fanId",
        "_functionType": 2,
        "_password": "password",
      },
      "127.0.0.1",
    ],
  ],
  "response": {
    "timerMode": "1",
  },
}
`;

exports[`Api set functions setTimerMode sends value 2 1`] = `
{
  "calls": [
    [
      E {
        "_dataEntries": [
          {
            "parameter": 7,
            "value": Uint8Array [
              2,
            ],
          },
        ],
        "_deviceId": "fanId",
        "_functionType": 2,
        "_password": "password",
      },
      "127.0.0.1",
    ],
  ],
  "response": {
    "timerMode": "2",
  },
}
`;

exports[`Api set functions update gets response 1`] = `
{
  "calls": [
    [
      E {
        "_dataEntries": [
          {
            "parameter": 1,
            "value": undefined,
          },
          {
            "parameter": 2,
            "value": undefined,
          },
          {
            "parameter": 68,
            "value": undefined,
          },
          {
            "parameter": 6,
            "value": undefined,
          },
          {
            "parameter": 102,
            "value": undefined,
          },
          {
            "parameter": 183,
            "value": undefined,
          },
          {
            "parameter": 136,
            "value": undefined,
          },
          {
            "parameter": 100,
            "value": undefined,
          },
          {
            "parameter": 37,
            "value": undefined,
          },
          {
            "parameter": 15,
            "value": undefined,
          },
          {
            "parameter": 25,
            "value": undefined,
          },
          {
            "parameter": 185,
            "value": undefined,
          },
          {
            "parameter": 74,
            "value": undefined,
          },
          {
            "parameter": 7,
            "value": undefined,
          },
          {
            "parameter": 131,
            "value": undefined,
          },
          {
            "parameter": 11,
            "value": undefined,
          },
        ],
        "_deviceId": "fanId",
        "_functionType": 1,
        "_password": "password",
      },
      "127.0.0.1",
    ],
  ],
  "response": {
    "alarm_boost": false,
    "alarm_filter": false,
    "alarm_generic": false,
    "boost_delay": 30,
    "fan_speed": 0.7019607843137254,
    "filter_timer": "31:20:34",
    "humidity_sensor": true,
    "humidity_threshold": 70,
    "manualSpeed": 70.19607843137254,
    "measure_RPM": 236,
    "measure_humidity": 45,
    "onoff": true,
    "operationMode": "2",
    "speedMode": "1",
    "timerMode": "0",
    "timerMode_timer": "00:00:00",
    "unit_type": "Vento Expert Duo A30-1 W V.2",
  },
}
`;

exports[`Api set functions update sends correct data 1`] = `
{
  "calls": [
    [
      E {
        "_dataEntries": [
          {
            "parameter": 1,
            "value": undefined,
          },
          {
            "parameter": 2,
            "value": undefined,
          },
          {
            "parameter": 68,
            "value": undefined,
          },
          {
            "parameter": 6,
            "value": undefined,
          },
          {
            "parameter": 102,
            "value": undefined,
          },
          {
            "parameter": 183,
            "value": undefined,
          },
          {
            "parameter": 136,
            "value": undefined,
          },
          {
            "parameter": 100,
            "value": undefined,
          },
          {
            "parameter": 37,
            "value": undefined,
          },
          {
            "parameter": 15,
            "value": undefined,
          },
          {
            "parameter": 25,
            "value": undefined,
          },
          {
            "parameter": 185,
            "value": undefined,
          },
          {
            "parameter": 74,
            "value": undefined,
          },
          {
            "parameter": 7,
            "value": undefined,
          },
          {
            "parameter": 131,
            "value": undefined,
          },
          {
            "parameter": 11,
            "value": undefined,
          },
        ],
        "_deviceId": "fanId",
        "_functionType": 1,
        "_password": "password",
      },
      "127.0.0.1",
    ],
  ],
  "response": {},
}
`;
